src/moab/iMOAB.h


ErrCode iMOAB_RegisterApplication( const iMOAB_String app_name,
#ifdef MOAB_HAVE_MPI
ErrCode iMOAB_ReadHeaderInfo( const iMOAB_String filename,
                              int* num_global_vertices,
                              int* num_global_elements,
                              int* num_dimension,
                              int* num_parts );
ErrCode iMOAB_CoverageGraph( MPI_Comm* joint_communicator,
                             iMOAB_AppID pid_src,
                             iMOAB_AppID pid_migr,
                             iMOAB_AppID pid_intx,
                             int* src_id,
                             int* migr_id,
                             int* context_id );
ErrCode iMOAB_DumpCommGraph( iMOAB_AppID pid, int* context_id, int* is_sender, const iMOAB_String prefix );
ErrCode iMOAB_MergeVertices( iMOAB_AppID pid );
ErrCode iMOAB_SetMapGhostLayers( iMOAB_AppID pid, int* n_src_ghost_layers, int* n_tgt_ghost_layers );
ErrCode iMOAB_ComputeCoverageMesh( iMOAB_AppID pid_source, iMOAB_AppID pid_target, iMOAB_AppID pid_intersection );
ErrCode iMOAB_WriteCoverageMesh( iMOAB_AppID pid, const iMOAB_String prefix);
ErrCode iMOAB_ComputeMeshIntersectionOnSphere( iMOAB_AppID pid_source,
                                               iMOAB_AppID pid_target,
                                               iMOAB_AppID pid_intersection );
ErrCode iMOAB_ComputePointDoFIntersection( iMOAB_AppID pid_source,
                                           iMOAB_AppID pid_target,
                                           iMOAB_AppID pid_intersection );
ErrCode iMOAB_MigrateMapMesh( iMOAB_AppID pid1,
                              iMOAB_AppID pid2,
                              MPI_Comm* join,
                              MPI_Group* group1,
                              MPI_Group* group2,
                              int* type,
                              int* comp1,
                              int* comp2);
ErrCode iMOAB_LoadMapFile(
    iMOAB_AppID pid_source,
    iMOAB_AppID pid_target,
    iMOAB_AppID pid_intersection,
    int* srctype,
    int* tgttype,
    int* arearead,
    const iMOAB_String solution_weights_identifier, 
    const iMOAB_String remap_weights_filename );
ErrCode iMOAB_WriteMapFile(
    iMOAB_AppID pid_intersection,
    const iMOAB_String solution_weights_identifier, 
    const iMOAB_String remap_weights_filename );
ErrCode iMOAB_ComputeScalarProjectionWeights(
    iMOAB_AppID pid_intersection,
    const iMOAB_String solution_weights_identifier, 
    const iMOAB_String disc_method_source,
    int* disc_order_source,
    const iMOAB_String disc_method_target,
    int* disc_order_target,
    const iMOAB_String fv_method,
    int* fNoBubble,
    int* fMonotoneTypeID,
    int* fVolumetric,
    int* fInverseDistanceMap,
    int* fNoConservation,
    int* fValidate,
    const iMOAB_String source_solution_tag_dof_name,
    const iMOAB_String target_solution_tag_dof_name );
ErrCode iMOAB_ApplyScalarProjectionWeights(
    iMOAB_AppID pid_intersection,
    int* filter_type, 
    const iMOAB_String solution_weights_identifier, 
    const iMOAB_String source_solution_tag_name,
    const iMOAB_String target_solution_tag_name );
inline MPI_Fint MOAB_MPI_Comm_c2f( MPI_Comm* comm )
{
    return MPI_Comm_c2f( *comm );
}
inline MPI_Comm* MOAB_MPI_Comm_f2c( MPI_Fint fcomm )
{
    MPI_Comm* ccomm;
    ccomm  = (MPI_Comm*)( malloc( sizeof( MPI_Comm ) ) );  
    *ccomm = MPI_Comm_f2c( fcomm );
    if( *ccomm == MPI_COMM_NULL )
    {
        free( ccomm );
        IMOAB_THROW_ERROR( "The MPI_Comm conversion from Fortran to C failed.", NULL );
    }
    else
        return ccomm;
}
inline MPI_Fint MOAB_MPI_Group_c2f( MPI_Group* group )
{
    return MPI_Group_c2f( *group );
}
inline MPI_Group* MOAB_MPI_Group_f2c( MPI_Fint fgroup )
{
    MPI_Group* cgroup;
    cgroup  = (MPI_Group*)( malloc( sizeof( MPI_Group ) ) );  
    *cgroup = MPI_Group_f2c( fgroup );
    if( *cgroup == MPI_GROUP_NULL )
    {
        free( cgroup );
        IMOAB_THROW_ERROR( "The MPI_Group conversion from Fortran to C failed.", NULL );
    }
    else
        return cgroup;
}