src/iMOABF.F90


      integer(c_int) function iMOAB_CoverageGraph(joint_comm, pid_source, pid_migration, pid_intx, source_id, &
                                                  migration_id, context_id) bind(C, name='iMOAB_CoverageGraph')
        use, intrinsic :: iso_c_binding, only: c_int, c_ptr
        integer, intent(in) :: joint_comm ! MPI_Comm
        integer(c_int), intent(in) :: pid_source
        integer(c_int), intent(in) :: pid_migration
        integer(c_int), intent(in) :: pid_intx
        integer(c_int), intent(in) :: source_id
        integer(c_int), intent(in) :: migration_id
        integer(c_int), intent(in) :: context_id
      end function iMOAB_CoverageGraph

      integer(c_int) function iMOAB_DumpCommGraph_c(pid, context_id, is_sender, prefix) bind(C, name='iMOAB_DumpCommGraph')
        use, intrinsic :: iso_c_binding, only: c_int, c_char
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: context_id
        integer(c_int), intent(in) :: is_sender
        character(kind=c_char), intent(in) :: prefix(*)
      end function iMOAB_DumpCommGraph_c

      integer(c_int) function iMOAB_MergeVertices(pid) bind(C, name='iMOAB_MergeVertices')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
      end function iMOAB_MergeVertices

      integer(c_int) function iMOAB_MigrateMapMesh( pid1, pid2, jointcomm, groupA, groupB, type, comp1, comp2) &
            bind(C, name='iMOAB_MigrateMapMesh')
        use, intrinsic :: iso_c_binding, only : c_int
        integer(c_int), intent(in) :: pid1
        integer(c_int), intent(in) :: pid2
        integer, intent(in) :: jointcomm  ! MPI_Comm
        integer, intent(in) :: groupA     ! MPI_Group
        integer, intent(in) :: groupB     ! MPI_Group
        integer(c_int), intent(in) :: type
        integer(c_int), intent(in) :: comp1
        integer(c_int), intent(in) :: comp2
      end function iMOAB_MigrateMapMesh

      integer(c_int) function iMOAB_SetMapGhostLayers(pid, num_src_layers, num_tgt_layers) bind(C, name='iMOAB_SetMapGhostLayers')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid
        integer(c_int), intent(in) :: num_src_layers
        integer(c_int), intent(in) :: num_tgt_layers
      end function iMOAB_SetMapGhostLayers

! closing endif: MOAB_HAVE_MPI
#endif

      integer(c_int) function iMOAB_ComputeCoverageMesh(pid_source, pid_target, pid_intersection) &
                                                    bind(C, name='iMOAB_ComputeCoverageMesh')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid_source
        integer(c_int), intent(in) :: pid_target
        integer(c_int), intent(in) :: pid_intersection
      end function iMOAB_ComputeCoverageMesh

#ifdef MOAB_HAVE_TEMPESTREMAP
      integer(c_int) function iMOAB_WriteCoverageMesh_c(  pid,   prefix )&
                                                    bind(C, name='iMOAB_WriteCoverageMesh')
      use, intrinsic :: iso_c_binding, only: c_int, c_char
        integer(c_int), intent(in) :: pid
        character(kind=c_char), intent(in) :: prefix(*)
      end function iMOAB_WriteCoverageMesh_c

      integer(c_int) function iMOAB_ComputeMeshIntersectionOnSphere(pid_source, pid_target, pid_intersection) &
                                                                  bind(C, name='iMOAB_ComputeMeshIntersectionOnSphere')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid_source
        integer(c_int), intent(in) :: pid_target
        integer(c_int), intent(in) :: pid_intersection
      end function iMOAB_ComputeMeshIntersectionOnSphere

      integer(c_int) function iMOAB_ComputePointDoFIntersection(pid_source, pid_target, pid_intersection) &
                                                                bind(C, name='iMOAB_ComputePointDoFIntersection')
        use, intrinsic :: iso_c_binding, only: c_int
        integer(c_int), intent(in) :: pid_source
        integer(c_int), intent(in) :: pid_target
        integer(c_int), intent(in) :: pid_intersection
      end function iMOAB_ComputePointDoFIntersection

#ifdef MOAB_HAVE_NETCDF

      integer(c_int) function iMOAB_LoadMapFile_c(pid_source, pid_target, pid_intersection, src_disc_type, tgt_disc_type, &
                                                            arearead, solution_weights_identifier, remap_weights_filename) &
                                                                  bind(C, name='iMOAB_LoadMapFile')
            use, intrinsic :: iso_c_binding, only : c_int, c_char
            integer(c_int), intent(in) :: pid_source
            integer(c_int), intent(in) :: pid_target
            integer(c_int), intent(in) :: pid_intersection
            integer(c_int), intent(in) :: src_disc_type
            integer(c_int), intent(in) :: tgt_disc_type
            integer(c_int), intent(in) :: arearead
            character(kind=c_char), intent(in) :: solution_weights_identifier(*)
            character(kind=c_char), intent(in) :: remap_weights_filename(*)
      end function iMOAB_LoadMapFile_c

      integer(c_int) function iMOAB_WriteMapFile_c(pid_intersection, solution_weights_identifier,  &
                                                  remap_weights_filename) bind(C, name='iMOAB_WriteMapFile')
        use, intrinsic :: iso_c_binding, only: c_int, c_char
        integer(c_int), intent(in) :: pid_intersection
        character(kind=c_char), intent(in) :: solution_weights_identifier(*)
        character(kind=c_char), intent(in) :: remap_weights_filename(*)
      end function iMOAB_WriteMapFile_c

! closing endif: MOAB_HAVE_NETCDF
#endif

      integer(c_int) function iMOAB_ComputeScalarProjectionWeights_c(pid_intersection, solution_weights_identifier, &
                                                                  disc_method_source, disc_order_source, &
                                                                  disc_method_target, disc_order_target, &
                                                                  fv_methods, fNoBubble, fMonotoneTypeID, fVolumetric, &
                                                                  fInverseDistanceMap, fNoConservation, fValidate, &
                                                                  source_solution_tag_dof_name, target_solution_tag_dof_name) &
                                                                  bind(C, name='iMOAB_ComputeScalarProjectionWeights')
        use, intrinsic :: iso_c_binding, only: c_int, c_char
        integer(c_int), intent(in) :: pid_intersection
        character(kind=c_char), intent(in) :: solution_weights_identifier(*)
        character(kind=c_char), intent(in) :: disc_method_source(*)
        integer(c_int), intent(in) :: disc_order_source
        character(kind=c_char), intent(in) :: disc_method_target(*)
        character(kind=c_char), intent(in) :: fv_methods(*)
        integer(c_int), intent(in) :: disc_order_target
        integer(c_int), intent(in) :: fNoBubble
        integer(c_int), intent(in) :: fMonotoneTypeID
        integer(c_int), intent(in) :: fVolumetric
        integer(c_int), intent(in) :: fInverseDistanceMap
        integer(c_int), intent(in) :: fNoConservation
        integer(c_int), intent(in) :: fValidate
        character(kind=c_char), intent(in) :: source_solution_tag_dof_name(*)
        character(kind=c_char), intent(in) :: target_solution_tag_dof_name(*)
      end function iMOAB_ComputeScalarProjectionWeights_c

      integer(c_int) function iMOAB_ApplyScalarProjectionWeights_c(pid_intersection, filter_type, solution_weights_identifier, &
                                                                source_solution_tag_name, target_solution_tag_name) &
                                                                bind(C, name='iMOAB_ApplyScalarProjectionWeights')
        use, intrinsic :: iso_c_binding, only: c_int, c_char
        integer(c_int), intent(in) :: pid_intersection
        integer(c_int), intent(in) :: filter_type
        character(kind=c_char), intent(in) :: solution_weights_identifier(*)
        character(kind=c_char), intent(in) :: source_solution_tag_name(*)
        character(kind=c_char), intent(in) :: target_solution_tag_name(*)
      end function iMOAB_ApplyScalarProjectionWeights_c

! closing endif: MOAB_HAVE_TEMPESTREMAP
#endif

#ifdef MOAB_HAVE_MPI

! Add some helper MPI converter functions

      ! Convert a C-based MPI-Comm handle to fortran
      integer function iMOAB_MPI_Comm_c2f(c_handle) bind(C, name="MOAB_MPI_Comm_c2f")
        use, intrinsic :: iso_c_binding, only: c_ptr
        type(c_ptr), value :: c_handle
      end function

      ! Convert a Fortran-based MPI-integer handle to MPI-Comm pointer
      type(c_ptr) function iMOAB_MPI_Comm_f2c(f_handle) bind(C, name="MOAB_MPI_Comm_f2c")
        use, intrinsic :: iso_c_binding, only: c_ptr
        integer, intent(in) :: f_handle
      end function

      ! Convert a C-based MPI-Group handle to fortran
      integer function iMOAB_MPI_Group_c2f(c_handle) bind(C, name="MOAB_MPI_Group_c2f")
        use, intrinsic :: iso_c_binding, only: c_ptr
        type(c_ptr), value :: c_handle
      end function

      ! Convert a Fortran-based MPI-integer handle to MPI-Group pointer
      type(c_ptr) function iMOAB_MPI_Group_f2c(f_handle) bind(C, name="MOAB_MPI_Group_f2c")
        use, intrinsic :: iso_c_binding, only: c_ptr
        integer, intent(in) :: f_handle
      end function

#endif

   end interface

contains

!> Convert a Fortran string into the NUL-terminated form the C API expects.
!!
!! Trailing blanks are dropped and a single C_NULL_CHAR is appended.  Callers
!! that still terminate their own strings keep working: C_NULL_CHAR is not a
!! blank, so TRIM preserves it and the result simply carries two terminators,
!! of which C sees only the first.  An all-blank or zero-length argument maps
!! to the empty C string, which is what the API takes to mean "no options".
   pure function to_c_string( fstr ) result( cstr )
      character(len=*), intent(in) :: fstr
      character(kind=c_char, len=len_trim(fstr) + 1) :: cstr
      cstr = trim( fstr )//c_null_char
   end function to_c_string

#ifdef MOAB_HAVE_MPI
   integer(c_int) function iMOAB_RegisterApplication( app_name, fcomm, compid, pid ) result( ierr )
      character(len=*), intent(in) :: app_name
      integer, intent(in) :: fcomm
      integer(c_int), intent(in) :: compid
      integer(c_int), intent(out) :: pid
      ierr = iMOAB_RegisterApplication_c( to_c_string( app_name ), fcomm, compid, pid )
   end function iMOAB_RegisterApplication
#else
   integer(c_int) function iMOAB_RegisterApplication( app_name, compid, pid ) result( ierr )
      character(len=*), intent(in) :: app_name
      integer(c_int), intent(in) :: compid
      integer(c_int), intent(out) :: pid
      ierr = iMOAB_RegisterApplication_c( to_c_string( app_name ), compid, pid )
   end function iMOAB_RegisterApplication
#endif

   integer(c_int) function iMOAB_ReadHeaderInfo( filename, num_global_vertices, num_global_elements, &
                                                 num_dimension, num_parts ) result( ierr )
      character(len=*), intent(in) :: filename
      integer(c_int), intent(out) :: num_global_vertices
      integer(c_int), intent(out) :: num_global_elements
      integer(c_int), intent(out) :: num_dimension
      integer(c_int), intent(out) :: num_parts
      ierr = iMOAB_ReadHeaderInfo_c( to_c_string( filename ), num_global_vertices, num_global_elements, &
                                     num_dimension, num_parts )
   end function iMOAB_ReadHeaderInfo
